FIX: project section overflow horizontal on DE version

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -74,6 +74,11 @@ html {
     @apply transform transition-transform duration-300 ease-in-out hover:scale-110 hover:shadow-2xl active:scale-95;
 }
 
+.card-description {
+    hyphens: auto;
+    overflow-wrap: break-word;
+}
+
 .card-description::after {
     content: "";
     position: absolute;
